# PyNFSeNacional

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: conhecimento-fiscal.md  roadmap.md
examples/: config-exemplo.json  config-exemplo.jsonc  emitir_exemplo.py
src/pynfsenacional/: __init__.py  assinatura.py  certificado.py  cli.py  config.py  danfse.py  documentos.py  dps.py  emissor.py  relogio.py  sefin.py
tests/: conftest.py  test_certificado.py  test_cli.py  test_danfse.py  test_dps.py  test_emissor.py  test_golden.py  test_sefin.py  test_smoke.py  test_validacao.py
tests/golden/: gabarito_config.json  gabarito_dps_assinado.xml  regenerar_gabarito.sh
